k8s/dev/web-ingress.yaml
# k8s/dev/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: task-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
